Fill in D2.2 report

--- a/common/deliverable.sty
+++ b/common/deliverable.sty
@@ -12,6 +12,7 @@
 \RequirePackage{tabularx}
 \RequirePackage{geometry}
 \RequirePackage{enumitem}
+\RequirePackage[print-unity-mantissa=false]{siunitx}
 
 % Define custom commands
 \newcommand*{\Num}{N\textsuperscript{o}\xspace}
